[build-system]
requires = [
  "setuptools >= 43",
  "Cython >= 3",
  "pkgconfig",
]
build-backend = "setuptools.build_meta"

[tool.black]
target_version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | build
  | dist
  | docs
)/
'''
